# talos-local

./: .editorconfig  .envrc  .gitignore  Brewfile  README.md  pyproject.toml  tl-config.toml
config/: cluster.json
config/controlplane/: parallels.vm.json
talos/: __main__.py  app.py  cli_group.py  config.py  db.py  logging.py
talos/cmd/: init.py
