[project]
name = "talos"
version = "0.0.0"
description = ""
authors = [{ name = "Jackson Porter", email = "jackson@jacksonporterjp.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "loguru (>=0.7.2,<1.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]
scripts = { tl = "talos.app:main" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

